Fix align header title and button text for ios

--- a/apps/firefly/mobile/src/app/pages/login/login.page.scss
+++ b/apps/firefly/mobile/src/app/pages/login/login.page.scss
@@ -381,9 +381,12 @@ input[type="color"]
 
 .cpt-container
 {
-    position: relative;
-    background-color: $app-auth-color-background;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
     height: 100%;
+    background-color: $app-auth-color-background;
 
     > .tn-container
     {
